# src/main/java/uz/umft/qabul/controller/dto/request/RefreshTokenRequest.java
@@ -1,11 +1,0 @@
-package uz.umft.qabul.controller.dto.request;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-import jakarta.validation.constraints.NotBlank;
-
-public record RefreshTokenRequest(
-        @JsonProperty("refresh_token")
-        @NotBlank
-        String refreshToken
-) {
-}
